Make the "centered" container fixed-width.
This makes it visually identical to our modals, and avoids issues where
fluid container is either a bit too big or a bit too small.

--- a/resources/assets/app.scss
+++ b/resources/assets/app.scss
@@ -30,9 +30,9 @@ body, html {
 .container .container__block {
   &.-centered {
     @include media($tablet) {
-      @include span(9 of 12);
-      @include push(2);
-
+      float: none;
+      max-width: 600px;
+      margin: $base-spacing auto;
       text-align: center;
 
       // @TODO: Hacky!
